// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TomorrowListPage render correct with tasks 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <h2
          class="mb-3"
        >
          Задачи на завтра
        </h2>
        <ul
          class="list"
        >
          <li
            class="content__li"
          >
            <div
              class="content content_border"
            >
              <span
                class="task"
              >
                <div
                  class="indicator"
                >
                  <div
                    class="indicator__priority indicator__priority_regular"
                  />
                  <div
                    class="indicator__repeat"
                  />
                </div>
                <span
                  class="task__taskName"
                >
                  task0
                </span>
              </span>
              <span
                class="task__buttons"
              >
                <button
                  aria-label="options"
                  class="button"
                  data-testid="options"
                  name="options"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 7h0.25c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.413-0.338-0.75-0.75-0.75h-0.25v-3h-2v3h-0.25c-0.412 0-0.75 0.337-0.75 0.75v2.5c0 0.412 0.338 0.75 0.75 0.75h0.25v9h2v-9zM12 4h2v2h-2v-2zM9.25 13c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.412-0.338-0.75-0.75-0.75h-0.25v-9h-2v9h-0.25c-0.412 0-0.75 0.338-0.75 0.75v2.5c0 0.412 0.338 0.75 0.75 0.75h0.25v3h2v-3h0.25zM7 10h2v2h-2v-2zM4.25 7c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.413-0.338-0.75-0.75-0.75h-0.25v-3h-2v3h-0.25c-0.413 0-0.75 0.337-0.75 0.75v2.5c0 0.412 0.337 0.75 0.75 0.75h0.25v9h2v-9h0.25zM2 4h2v2h-2v-2z"
                    />
                  </svg>
                   
                </button>
                <button
                  aria-label="check-button"
                  class="button task__buttons_left-margin"
                  data-testid="check-button"
                  name="check-button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 0h-12c-1.1 0-2 0.9-2 2v12c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2v-12c0-1.1-0.9-2-2-2zM14 14h-12v-12h12v12z"
                    />
                  </svg>
                   
                </button>
              </span>
            </div>
          </li>
        </ul>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without init 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <div
          class="spinner-border spinner"
          role="status"
        >
          <span
            class="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without tasks 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <h2
          class="mb-3"
        >
          Задачи на завтра
        </h2>
        <span
          class="stub"
        >
          Нет новых задач
        </span>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;
